--- a/css/app.css
+++ b/css/app.css
@@ -205,3 +205,30 @@ h1 {
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     color: #fff;
 }
+
+@media (max-width: 679px) {
+    .deck {
+        width: 98%;
+    }
+    .deck .card {
+        width: 32%;
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: 450px ) {
+
+    .score-panel {
+        width: 90%;
+    }
+
+    .deck .card {
+        width: 48%;
+    }
+}
+
+@media (max-width: 320px ) {
+    .deck .card {
+        width: 98%;
+    }
+}
